# tempo-zk-rollup

./: .gitignore  Cargo.toml  README.md  foundry.toml
eth/artifacts/contracts/AcrossWithAuthorization.sol/: AcrossWithAuthorization.json
eth/artifacts/contracts/rollup/RollupV6.sol/: RollupV6.json
pkg/block-store/: Cargo.toml
pkg/block-store/src/: keys.rs  lib.rs  list.rs  migration.rs
pkg/burn-substitutor/: Cargo.toml
pkg/burn-substitutor/src/: lib.rs
pkg/contracts/: Cargo.toml
pkg/contracts/src/: across.rs  client.rs  error.rs  lib.rs  rollup.rs  tests.rs  usdc.rs
pkg/doomslug/: Cargo.toml
pkg/doomslug/src/: doomslug.rs  types.rs
pkg/node/: Cargo.toml
pkg/node/src/: block.rs  cache.rs  constants.rs  errors.rs  lib.rs  mempool.rs  network.rs  network_handler.rs  node.rs  sync.rs  utxo.rs
pkg/node/src/config/: cli.rs  default_config.toml  mod.rs
pkg/node/src/node/: block.rs  block_format.rs  load.rs  proposal.rs  snapshot.rs  tick_worker.rs  transaction.rs  txn_format.rs
pkg/node/src/prover/: db.rs  error.rs  worker.rs
pkg/node/src/rpc/: http_error.rs  server.rs  stats.rs
pkg/node/src/rpc/routes/: blocks.rs  configure.rs  element.rs  health.rs  height.rs  merkle.rs  mod.rs  state.rs  txn.rs
pkg/node/tests/rpc/: empty.rs  merkle.rs  mod.rs  sync.rs  transaction.rs  types.rs
pkg/p2p2/: Cargo.toml
pkg/p2p2/src/: behaviour.rs  config.rs  lib.rs  network.rs  protocol.rs  transport.rs
pkg/primitives/: Cargo.toml
pkg/primitives/src/: lib.rs  peer.rs  sig.rs
pkg/prover/: Cargo.toml  README.md
pkg/prover/src/: lib.rs  smirk_metadata.rs
pkg/rpc/: Cargo.toml
pkg/rpc/src/: code.rs  error.rs  lib.rs  longpoll.rs  middleware.rs  tracing.rs
pkg/smirk/: Cargo.toml
pkg/smirk/benches/: storage_load.rs
pkg/smirk/src/: macros.rs
pkg/smirk/src/hash_cache/: mod.rs
pkg/smirk/src/storage/: batch.rs  load.rs  tests.rs
pkg/smirk/src/storage/test-snapshots/: known_hashes_1.txt  known_hashes_2.txt
pkg/smirk/src/tree/: batch.rs  insert.rs  iter.rs  known_hashes.rs  mod.rs  path.rs  proptest.rs  raw_api.rs  tree_repr.rs
pkg/testutil/: Cargo.toml
pkg/testutil/src/: eth.rs  lib.rs
pkg/whitelist-ips/: Cargo.toml
pkg/whitelist-ips/src/: lib.rs
pkg/wire-message/: Cargo.toml
pkg/wire-message-macro/: Cargo.toml
pkg/zk-circuits/: Cargo.toml
pkg/zk-circuits/src/: data.rs  lib.rs  params.rs  util.rs
pkg/zk-circuits/src/burn_to/: burn.rs  burn_to_verifier.yul  circuit.rs  tests.rs
pkg/zk-circuits/src/keys/: mod.rs
pkg/zk-primitives/: Cargo.toml
pkg/zk-primitives/src/element/: diesel_pg.rs  mod.rs
src/: AcrossWithAuthorization.sol  AggregateVerifierV1.sol  BurnVerifierV1.sol  BurnVerifierV2.sol  IUSDC.sol  MintVerifierV1.sol  Verifier.sol
src/rollup/: Proxy.sol  RollupV1.sol  RollupV2.sol  RollupV3.sol  RollupV4.sol  RollupV5.sol  RollupV6.sol
tempo/artifacts/contracts/IUSDC.sol/: IUSDC.json
