[workspace]

resolver = "2"

members = ["pkg/*"]

# `opt-level = 1` has a decent impact on perf, and doesn't impact compile times much
[profile.dev]
opt-level = 1

# `opt-level = 3` has a large impact on perf, but does impact compile times. However, we only apply it to dependencies, 
# so incremental compilation makes this choice essentially "free" after the first compile
[profile.dev.package."*"]
opt-level = 3

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop" }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "scroll-dev-0220" }
[patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "0.3.1-derive-serde" }

[patch.crates-io]
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
ethers-providers = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
ethers-signers = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }

[workspace.dependencies]
block-store = { path = "./pkg/block-store" }
burn-substitutor = { path = "./pkg/burn-substitutor" }
contracts = { path = "./pkg/contracts" }
doomslug = { path = "./pkg/doomslug" }
node = { path = "./pkg/node" }
p2p2 = { path = "./pkg/p2p2" }
primitives = { path = "./pkg/primitives" }
prover = { path = "./pkg/prover" }
rpc = { path = "./pkg/rpc" }
smirk = { path = "./pkg/smirk" }
whitelist-ips = { path = "./pkg/whitelist-ips" }
wire-message = { path = "./pkg/wire-message" }
zk-circuits = { path = "./pkg/zk-circuits" }
zk-primitives = { path = "./pkg/zk-primitives" }
testutil = { path = "./pkg/testutil" }

actix-cors = "0.6.4"
actix-server = "2.3.0"
actix-web = "4.4.0"
aes-gcm = "0.10.3"
async-stripe = { version = "0.31", features = ["runtime-tokio-hyper"] }
async-trait = "0.1"
base64 = "0.21.5"
benchy = "0.1.1"
bitvec = "1.0.1"
blake2b_simd = "1.0"
bs58 = "0.5.0"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "=4.1.1", features = ["env", "derive"] }
colored = "2.0.4"
color-eyre = "0.6"
dashmap = "5"
diesel = { version = "2.1.0", features = [
    "postgres",
    "uuid",
    "chrono",
    "r2d2",
    "serde_json",
] }
tokio-postgres = "0.7.2"
postgres-native-tls = "0.5.0"
native-tls = "0.2.12"
derive_more = "0.99.17"
dirs = "5.0.1"
dotenvy = "0.15.7"
eth-types = { git = "https://github.com/polybase/zkevm-circuits", branch = "develop-polybase" }
ethereum-types = "0.14.1"
ethnum = "1.5.0"
expect-test = "1.4.1"
eyre = "0.6"
ff = "0.12.1"
figment = { version = "0.10", features = ["env", "toml"] }
file-lock = "2"
futures = "0.3.26"
futures-timer = "3.0.2"
futures-util = "0.3.29"
halo2-base = { git = "https://github.com/scroll-tech/halo2-lib", tag = "v0.1.5", default-features = false, features = [
    "halo2-pse",
    "display",
] }
halo2-ecc = { git = "https://github.com/scroll-tech/halo2-lib", tag = "v0.1.5", default-features = false, features = [
    "halo2-pse",
    "display",
] }
halo2_gadgets = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop" }
halo2_proofs = "0.3"
halo2curves = { version = "0.1.0" }
hex = { version = "0.4", features = ["serde"] }
hmac = "0.12"
insta = { version = "1", features = ["json"] }
itertools = "0.11.0"
jsonwebtoken = "7"
lazy_static = "1.4.0"
libp2p = { version = "0.51", default-features = false, features = [
    "ping",
    "request-response",
    "identify",
    "gossipsub",
    "macros",
    "tokio",
    "noise",
    "dns",
    "yamux",
    "tcp",
] }
libp2p-core = { version = "0.38.0" }
notify = "6"
num-bigint = "0.4.6"
once_cell = "1.19.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
phonenumber = "0.3"
poseidon-circuit = { git = "https://github.com/scroll-tech/poseidon-circuit", branch = "main" }
pretty-hex = "0.3.0"
proptest = "1"
quickcheck = "1.0.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_xorshift = "0.3"
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
rocksdb = "0.21"
rustc-hex = "2.1.0"
sentry = "0.32.1"
sentry-tracing = "0.32.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
serde_qs = "0.12.0"
serde_yaml = "0.9.27"
serde_bytes = "0.11.14"
bincode = "1.3.3"
scopeguard = "1.2.0"
secp256k1 = { version = "0.28.0", features = [
    "rand",
    "global-context",
    "recovery",
] }
sha2 = "0.10.6"
sha3 = "0.10.1"
snark-verifier = { git = "https://github.com/scroll-tech/snark-verifier", tag = "v0.1.5" }
snark-verifier-sdk = { git = "https://github.com/scroll-tech/snark-verifier", tag = "v0.1.5", default-features = false, features = [
    "loader_halo2",
    "loader_evm",
    "halo2-pse",
] }
spinoff = "0.8.0"
tracing-stackdriver = { version = "0.7.2", features = ["valuable"] }
static_assertions = "1"
tabular = "0.2.0"
tempdir = "0.3"
test-strategy = "0.3.1"
thiserror = "1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tracing = { version = "0.1.37", features = ["valuable"] }
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "fmt",
    "std",
    "registry",
    "ansi",
    "json",
] }
uint = "0.9.1"
unarray = "0.1.4"
user-error = "1.2.8"
uuid = { version = "1.7.0", features = ["v4"] }
web3 = "0.19.0"
zkevm-circuits = { git = "https://github.com/polybase/zkevm-circuits", branch = "develop-polybase", default-features = false, features = [
    "parallel_syn",
    "scroll",
    "shanghai",
    "test",
    "debug-annotations",
] }
serial_test = "3.0.0"
# the `de_strict_order` flag is important for maintaining bijection
borsh = { version = "1", features = ["derive", "de_strict_order", "rc"] }
opentelemetry = { version = "0.21.0", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.21.2", features = [
    "rt-tokio",
    "metrics",
    "trace",
] }
opentelemetry-otlp = { version = "0.14.0", features = [
    "tokio",
    "tonic",
    "trace",
    "metrics",
] }
tracing-opentelemetry = "0.22.0"

# utilities for deriving stuff on macros
strum = "0.26"
strum_macros = "0.26"
rayon = "1"
derivative = "2"
microtype = "0.7"
rand_derive2 = "0.1"
either = "1.9.0"
flate2 = "1.0.28"
object_store = { version = "0.10.0", features = ["gcp"] }
expo_push_notification_client = { git = "https://github.com/polybase/expo-push-notification-client-rust.git", branch = "rustc-1_68_nightly" }
num_cpus = "1.16.0"
